<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhisperSpot</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_initial_setup">InitialSetup</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="blue_team">Blue</string>
    <string name="red_team">Red</string>
    <string name="welcome_agent">Welcome agent.</string>
    <string name="name_input">What is your name?</string>
    <string name="choose_name">Choose your username.</string>
    <string name="team_input">What is your quest?</string>
    <string name="join_bowler">Join the classy bowler hat spy society?</string>
    <string name="join_fedora">Join the trendy fedora hat spy coalition?</string>
    <string name="menu_toggle_node_info_prompt">Toggle Node Info</string>
    <string name="menu_toggle_dev_mode_prompt">Toggle Dev Mode</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leave_trap">Leave Trap</string>
    <string name="gather_intel">Gather Intel</string>
    <string name="deliver_intel">Deliver Intel</string>
    <string name="decrypt_message">Decrypt Message</string>

</resources>
