<!--<fragment --><!--xmlns:tools="http://schemas.android.com/tools"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:id="@+id/map"--><!--tools:context=".MapsActivity"--><!--android:name="com.google.android.gms.maps.SupportMapFragment"/>-->

<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sliding_panel_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:panelHeight="20dp"
    sothree:shadowHeight="4dp"
    tools:context=".MapActivity">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <com.google.android.gms.maps.MapView
            android:id="@+id/map"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:apiKey="@string/google_maps_key" />

        <TextView
            android:id="@+id/about"
            android:layout_width="140dp"
            android:layout_height="64dp"
            android:layout_gravity="right|top"
            android:background="@color/blue"
            android:visibility="invisible"/>

        <!--<TextView-->
            <!--android:id="@+id/nodeStats"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="218dp"-->
            <!--android:layout_gravity="left|bottom"-->
            <!--android:background="@color/material_blue_grey_800"-->
            <!--android:text="Medium Text"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:visibility="invisible" />-->

        <Spinner
            android:id="@+id/node_selector"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:textAlignment="center"
            android:visibility="invisible" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/sliding_up_panel"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:background="@color/red">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:id="@+id/center_anchor"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerInParent="true" />

            <Button
                android:id="@+id/lvtrp"
                style="@style/ButtonFont"
                android:text="@string/leave_trap" />

            <Button
                android:id="@+id/lvmsg"
                style="@style/ButtonFont"
                android:layout_alignParentLeft="true"

                android:layout_toLeftOf="@id/center_anchor"
                android:text="@string/deliver_intel" />

            <Button
                android:id="@+id/tkmsg"
                style="@style/ButtonFont"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/center_anchor"
                android:text="@string/gather_intel" />

            <Button
                android:id="@+id/dcptmsg"
                style="@style/ButtonFont"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/center_anchor"
                android:text="@string/decrypt_message" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
            android:id="@+id/popUp"
            android:layout_width="match_parent"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:background="@color/wallet_holo_blue_light"
            android:text=""
            android:visibility="gone" />

            <ProgressBar
                android:id="@+id/ownerBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp" />

            </RelativeLayout>
    </LinearLayout>

</com.sothree.slidinguppanel.SlidingUpPanelLayout>